--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>New Blog Entry</h1>
+    <h1>New Blogz Entry</h1>
     <form method='post' id='new_entry'>
         <label>
             New Entry Title:
