--- a/templates/register.html
+++ b/templates/register.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Register to Get It Done!</h1>
+<h1>Signup for Blogz!</h1>
 <form action="/register" method="post">
     <table>
         <tr>
+            <td><label for="name">User Name</label></td>
+            <td>
+                <input name="username" type="text" value="{{ username }}">
+            </td>
+        </tr>        
+        <tr>
             <td><label for="email">Email</label></td>
             <td>
-                <input name="email" type="email" value="{{ email }}">
+            <input name="email" type="email" value="{{ email }}">
             </td>
         </tr>
         <tr>
